Fix z-index on labrio/prefeitura logos

--- a/app/assets/stylesheets/demands.sass
+++ b/app/assets/stylesheets/demands.sass
@@ -141,6 +141,7 @@ body
   bottom: 2%
   right: 2%
   opacity: .7
+  z-index: 14
   &:hover
     opacity: 1
 
